--- a/app/cells/frequently_asked_questions/show.slim
+++ b/app/cells/frequently_asked_questions/show.slim
@@ -1,5 +1,5 @@
 main.content-main.content-main--wide
   .wrapper-inner
-    h1 = I18n.t '.heading'
+    h1 = t 'heading'
     - @section_ids.each do |section_id|
       = cell(:frequently_asked_questions).(:section, section_id)
