--- a/app/views/pages/not_found.html.slim
+++ b/app/views/pages/not_found.html.slim
@@ -1,4 +1,4 @@
-- provide(:title, t('.title'))
+- provide(:title, t('.title').to_s)
 - cache ['not_found_page', I18n.locale] do
 
   main.content-main.content-main--wide
