--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -46,7 +46,7 @@
           ul.section-content__langlist
             - @offer.all_language_filters_sorted.each do |language|
               li
-                => t "offers.shared.current_and_original_locale.#{language}"
+                => t "js.shared.current_and_original_locale.#{language}"
 
         button.section-content__toggle
           = t '.speaking'
