--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -521,6 +521,11 @@
     }
   }
 
+  .Listing-results__meta {
+    background: none;
+    padding: 6px;
+  }
+
   .aside-standard__container {
     margin-top: 30px;
     margin-bottom: 0;
@@ -561,6 +566,15 @@
     body[class="template--pages-"] & {
       padding-top: 68px;
     }
+  }
+
+  .Listing-results__meta {
+    width: 100%;
+  }
+
+  .Listing-results__orga-display {
+    border-top: 2px solid $brand_grey;
+    padding-top: 4px;
   }
 
   .section-team__member {
