--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -6,7 +6,7 @@
 
 noscript.NoScript
   i.fa.fa-exclamation-triangle
-  p = t('.noscript_warning')
+  p== t('.noscript_warning')
 
 / Inform JS…
 / …about the category structure
