--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -8,8 +8,7 @@ header.header-main
       nav.nav-welt.nav-welt--notstart
         ul.nav-welt__list
           - SectionFilter::IDENTIFIER.each do |section|
-            li.nav-welt__listitem
-              = link_to section, offers_path(section: section),
+            li.nav-welt__listitem.nav-welt__listitem--start.tooltip--welcome.tooltip--welt[class="tooltip--welt-#{section}" title=t("shareds.tooltips.welcome.world_switch.#{section}")]              = link_to section, offers_path(section: section),
                         id: "clarat--#{section}"
       = render '/offers/shared/search_form', search_form: search_form,
                                              labels: :short,
