--- a/app/views/offers/show/_who_location.html.slim
+++ b/app/views/offers/show/_who_location.html.slim
@@ -4,7 +4,7 @@
     - unless offer.location_name.blank?
       .offer-location-name.org= offer.location_name
     - unless offer.location_addition.blank?
-      span.extended-address= offer.location_addition
+      span.extended-address== offer.location_addition
       br
     span.street-address= offer.location_street
     br
