--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -597,6 +597,10 @@
     display: none;
   }
 
+  .footer-main__firstrow {
+    margin-top: 0;
+  }
+
   .footer-main__subscribe,
   .footer-main__about {
     float: left;
