Implement final cookie business logic according to issue (#609)

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -301,7 +301,7 @@
 
   .nav-welt__listitem--start {
     a {
-      height: 38px;
+      height: 28px;
     }
   }
 
@@ -634,6 +634,10 @@
     .template--offers-index & {
       display: none;
     }
+  }
+
+  div.qtip-content {
+    font-size: 11px;
   }
 
 }
