--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -401,8 +401,7 @@
       }
 
       &:before {
-        border-width: 8px 0 8px 8px;
-        margin-bottom: -3px;
+        display: none;
       }
     }
   }
