--- a/app/views/subscriptions/shared/_new.html.slim
+++ b/app/views/subscriptions/shared/_new.html.slim
@@ -2,6 +2,7 @@
                   html: { class: 'newsletter-subscribe' },
                   remote: true do |f|
   = f.input :email,
+            hint: false,
             label: false,
             input_html: { \
               class: 'newsletter-subscribe__input',
