--- a/app/assets/stylesheets/navigation/_nav-welt.scss
+++ b/app/assets/stylesheets/navigation/_nav-welt.scss
@@ -55,7 +55,8 @@
     }
 
     &:before {
-      display: inline-block;
+      display: none;
+      visibility: hidden;
       content: '';
       width: 0;
       height: 0;
@@ -90,8 +91,8 @@
     cursor: default;
 
     &:before {
-      visibility: hidden;
-      display: none;
+      visibility: visible;
+      display: inline-block;
     }
   }
 }
@@ -108,8 +109,8 @@
     cursor: default;
 
     &:before {
-      visibility: hidden;
-      display: none;
+      visibility: visible;
+      display: inline-block;
     }
   }
 }
