--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -59,7 +59,6 @@
   background-size: contain;
 
 
-
   body.refugees & {
     background: image-url('foreground--refugees.svg');
     background-repeat: no-repeat;
@@ -91,6 +90,10 @@
   @extend %roboto_bold;
   font-weight: 400;
   font-size: 34px;
+
+  .template--offers-show & {
+    margin-bottom: 0;
+  }
 }
 
 .jump-to-categories {
