--- a/app/assets/stylesheets/modules/sections/_section-content.scss
+++ b/app/assets/stylesheets/modules/sections/_section-content.scss
@@ -53,6 +53,11 @@
   .section-content--alloffers & {
     position: relative;
     padding-right: 70px;
+
+    body.ar & {
+      padding-left: 70px;
+      padding-right: 15px;
+    }
   }
 }
 
