clarat-org/clarat#736 - anchors for faqs sections and added one

--- a/app/cells/frequently_asked_questions/section.slim
+++ b/app/cells/frequently_asked_questions/section.slim
@@ -1,5 +1,5 @@
 section
-  h3.section-question-group__headline
+  h3.section-question-group__headline[id=@anchor]
     = t "section_#{@section_id}.heading"
   .section-question-group__body
     - @question_ids.each do |question_id|
