--- a/app/views/offers/show/_website_section.html.slim
+++ b/app/views/offers/show/_website_section.html.slim
@@ -6,7 +6,8 @@
       - last_index = websites.count - 1
 
       - websites.each_with_index do |website, index|
-        = link_to t(".websites.#{website.host}") + website.pdf_appendix,
-                  website.url,
-                  target: '_blank'
+        - display_name = t(".websites.#{website.host}") + website.pdf_appendix
+        - if website.host == 'own'
+          - display_name = website.shorten_url + website.pdf_appendix
+        = link_to display_name, website.url, target: '_blank'
         = ' | ' unless index == last_index
