Fix Distributor module and "dependencies"

--- a/app/assets/stylesheets/form/_newsletter-subscribe.scss
+++ b/app/assets/stylesheets/form/_newsletter-subscribe.scss
@@ -15,7 +15,7 @@
 
 .newsletter-subscribe__input,
 .newsletter-subscribe__submit {
-  height: 32px;
+  min-height: 32px;
 }
 
 input.newsletter-subscribe__input {
