--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -159,7 +159,7 @@
     }
 
     body.ar & {
-      padding: 10px 15px 0 15px;
+      padding: 10px 15px 0 0;
 
       label.string {
         right: 9px;
