--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -10,6 +10,10 @@
   width: 700px;
   list-style: none;
 
+  body.ar & {
+    padding: 22px 25px 0 0;
+  }
+
   .input {
     &.string {
       position: relative;
@@ -80,10 +84,16 @@
   background: $brand_white;
   font-size: 20px;
   line-height: 47px;
+  box-sizing: border-box;
 
   // explicit definition and using important to override twitter-typeahead
   &:focus {
     background: $brand_beige !important;
+  }
+
+  body.ar & {
+    margin-left: 10px;
+    margin-right: 0;
   }
 }
 
@@ -99,6 +109,7 @@
 }
 
 #search_form_query {
+  width: 288px;
   padding-left: 62px;
 
   body.en & {
@@ -106,12 +117,13 @@
   }
 
   body.ar & {
-    padding-right: 42px;
+    padding-right: 48px;
     padding-left: 14px;
   }
 }
 
 #search_form_search_location {
+  width: 278px;
   padding-left: 52px;
   border-radius: 0;
 
@@ -120,7 +132,7 @@
   }
 
   body.ar & {
-    padding-right: 42px;
+    padding-right: 47px;
     padding-left: 14px;
   }
 }
@@ -139,10 +151,23 @@
   -webkit-border-bottom-left-radius: 0;
   -webkit-border-bottom-right-radius: 0;
   -webkit-border-top-right-radius: 0;
+
+  body.ar & {
+    border-top-left-radius: 0; // reset
+    @extend %clarat_rounding_end;
+    margin-left: 10px;
+    margin-right: 0;
+  }
 }
 
 .main-search__submit {
   @extend %clarat_rounding_end;
+
+  body.ar & {
+    border-bottom-right-radius: 0; // reset
+    margin-left: 10px;
+    @extend %clarat_rounding_start;
+  }
 }
 
 .main-search__advanced-filter {
