--- a/app/assets/stylesheets/modules/_categories.scss
+++ b/app/assets/stylesheets/modules/_categories.scss
@@ -23,7 +23,7 @@
     @extend %roboto_bold;
     @extend %clarat_rounding_start;
     @extend %clarat_rounding_end;
-    display: inline-block;
+    display: block;
     margin-bottom: 20px;
     padding: 4px 10px;
     background: $brand_yellow;
