--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -299,7 +299,7 @@
       height: 35px;
       background-size: 60%;
 
-      body.ar & {
+      body.ar:not(.template--pages-home) & {
         right: auto;
         left: 20px;
       }
@@ -373,6 +373,7 @@
 
         .input {
           margin-right: 0;
+          padding-left: 0;
         }
       }
     }
@@ -511,6 +512,11 @@
     position: absolute;
     right: 4px;
     top: 4px;
+
+    body.ar & {
+      left: 4px;
+      right: auto;
+    }
   }
 
   .Distributor__advanced-filter-trigger-wrapper {
