--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -48,6 +48,7 @@
           ul.section-content__langlist
             - @offer.all_language_filters_sorted.each do |language|
               li
+                - debugger
                 => t "js.shared.current_and_original_locale.#{language}"
 
         button.section-content__toggle
