Language related text length and positioning fixes for fr, pl, ru

--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -67,10 +67,12 @@
 
 %roboto_light {
   font-family: 'roboto-light', 'Roboto', sans-serif;
+  font-weight: 200;
 }
 
 %roboto_bold {
   font-family: 'roboto-bold', 'Roboto', sans-serif;
+  font-weight: 700;
 }
 
 %roboto_italic {
