--- a/app/assets/stylesheets/navigation/_nav-lang.scss
+++ b/app/assets/stylesheets/navigation/_nav-lang.scss
@@ -102,4 +102,8 @@ button.nav-lang__button {
 
 .nav-lang__listitem--active {
   @extend %roboto_black;
+
+  body.ru & {
+    font-weight: 700;
+  }
 }
