--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -10,7 +10,6 @@
 
   // Header ######################################
 
-
   .header-main {
     &:before {
       display: none; // hiding visual yellow enlargement necessary in 1200px and bigger
@@ -128,5 +127,13 @@
 
   .section-start__body {
     min-height: 370px;
+  }
+
+  .Listing-results__headline {
+
+    body.pl &,
+    body.fr & {
+      padding-right: 45%;
+    }
   }
 }
