--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -156,12 +156,12 @@
   }
 
   .Listing-results__headline {
-
     body.pl &,
     body.fr & {
       padding-right: 45%;
     }
-    
+  }
+
   // Misc ########################################
 
   #qtip-ttWeltFamily {
