--- a/app/assets/stylesheets/modules/_listing-offers.scss
+++ b/app/assets/stylesheets/modules/_listing-offers.scss
@@ -9,6 +9,15 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  font-size: 13px;
+}
+
+.Listing-offers__listitem {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .Listing-offers__address {
