Fix nav sections in PL on frontpage

--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -142,6 +142,7 @@
   .nav-sections__listitem {
     height: auto;
     width: 14.5%;
+    max-width: 107px;
     margin: 0;
     background-size: contain;
 
