--- a/app/assets/stylesheets/navigation/_nav-sections.scss
+++ b/app/assets/stylesheets/navigation/_nav-sections.scss
@@ -41,6 +41,12 @@
   text-align: center;
   font-size: 18px;
 
+  // For visual consistency, avoiding multi line on desktop
+
+  body.pl & {
+    font-size: 16px;
+  }
+
   a {
     position: absolute;
     top: 0;
