Font weight related fixes to harmonize between languages

--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -81,6 +81,10 @@
     position: relative;
   }
 
+  .page-detail__title {
+    font-weight: 700;
+  }
+
   .page-detail__icons {
     position: absolute;
     top: 0;
