--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,7 @@
 doctype html
 html class='no-js' lang=I18n.locale
   head
+    meta charset="utf-8"
     title
       = full_title(yield(:title))
     - meta_description = yield(:meta_description)
