Subtle alignment/margin fixes for AR

--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -160,6 +160,10 @@
     body.fr & {
       padding-right: 45%;
     }
+
+    body.ar & {
+      padding-left: 45%;
+    }
   }
 
   // Misc ########################################
