Fix commit c7526 in smaller viewport widths

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -572,6 +572,7 @@
     background-position: 100% top;
     background-size: contain;
     line-height: 57px; // closer to optical vertical middle
+    max-width: 100%;
 
     a {
       padding: 0;
