--- a/app/assets/stylesheets/navigation/_nav-sections.scss
+++ b/app/assets/stylesheets/navigation/_nav-sections.scss
@@ -40,6 +40,7 @@
   height: 110px;
   text-align: center;
   font-size: 18px;
+  word-wrap: break-word;
 
   // For visual consistency, avoiding multi line on desktop
 
