Small fixes for AR

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -766,6 +766,12 @@
     text-align: left;
   }
 
+  .newsletter-subscribe__submit {
+    body.ar & {
+      padding: 0;
+    }
+  }
+
   // Misc ######################################
 
   .JS-Cookie-warning {
