--- a/app/assets/stylesheets/modules/_categories.scss
+++ b/app/assets/stylesheets/modules/_categories.scss
@@ -59,6 +59,11 @@
       content: ' · ';
       left: -10px;
       font-weight: 700;
+
+      body.ar & {
+        left: auto;
+        right: -10px;
+      }
     }
   }
 
@@ -138,6 +143,11 @@
 
 .Categories__list .Categories__list {
   padding-left: 30px;
+
+  body.ar & {
+    padding-left: 0;
+    padding-right: 30px;
+  }
 }
 
 
