Reposition modal close button

--- a/app/assets/stylesheets/modules/_js-modal.scss
+++ b/app/assets/stylesheets/modules/_js-modal.scss
@@ -28,6 +28,11 @@
     right: -10px;
     width: 30px;
     height: 30px;
+
+    body.ar & {
+      right: auto;
+      left: -10px;
+    }
   }
 }
 
