--- a/app/views/emails/offers_index.html.slim
+++ b/app/views/emails/offers_index.html.slim
@@ -19,7 +19,11 @@
                   span.Listing-results__emphasis
                     = offer.organization_display_name
                   | &nbsp;
-                  = offer.location_address
+                  / Last update to make sort order transparent
+                  span
+                      i.fa.fa-clock-o
+                      => t 'offers.show.last_update'
+                      = offer.updated_at.strftime("%d.%m.%Y")
     - else
       h2 == t ".#{@current_section}.no_results",
               email: secure_email_to(@email.address, 0)
