--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -42,5 +42,6 @@ div.Distributor__search-form
       = f.input :target_audience, as: :hidden
       = f.input :exclusive_gender, as: :hidden
       = f.input :language, as: :hidden
+      = f.input :sort_order, as: :hidden
       = f.input :section, as: :hidden
     button.main-search__submit = t '.button'
