Fix for #756 regarding bold font in Russian/cyrillic fonts

--- a/app/assets/stylesheets/modules/_categories.scss
+++ b/app/assets/stylesheets/modules/_categories.scss
@@ -69,6 +69,10 @@
   &.active {
     > a {
       @extend %roboto_bold;
+
+      body.ru & {
+        font-weight: 700;
+      }
     }
 
     > .Categories__list {
