--- a/app/views/emails/offers_index.html.slim
+++ b/app/views/emails/offers_index.html.slim
@@ -11,7 +11,7 @@
             li.Listing-results__listitem
               h3.Listing-results__offer = link_to offer.name,
                          offer_path(id: offer.id, section: @current_section)
-              h4.Listing-results__offerinfo
+              h4.Listing-results__offerinfo.Listing-results__offerinfo--hasupdateinfo
                 - if offer.encounter && offer.encounter != 'personal'
                   span.Listing-results__contact-type
                     = t "js.single_search_result.encounters.#{offer.encounter}"
@@ -20,9 +20,10 @@
                     = offer.organization_display_name
                   | &nbsp;
                   / Last update to make sort order transparent
-                  span
+                  span.Listing-results__updateinfo
                     i.fa.fa-clock-o
-                    => t 'offers.show.last_update'
+                    / => t 'offers.show.last_update'
+                    | Update:&nbsp;
                     = offer.updated_at.strftime("%d.%m.%Y")
     - else
       h2 == t ".#{@current_section}.no_results",
