Improve sticky sidebar handling

--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -189,7 +189,7 @@
   }
 
   .aside-standard {
-    position: absolute !important; // Override JS
+    position: absolute;
     max-width: 27%;
   }
 
