for #761 - minor cleanup of unneeded code

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -106,7 +106,7 @@
   / mobile share buttons
   .shariff data={ lang: I18n.locale, \
                   services: '["mail", "whatsapp", "facebook", "twitter"]', \
-                  'mail-url' => 'mailto:',  }
+                  'mail-url' => 'mailto:' }
 
   / - content_for :view_specific_scripts do
   /   = javascript_include_tag "gmaps_search_results.js"
