Add icons as FAQ list item bullets

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -737,6 +737,14 @@
     }
   }
 
+  li[class^="FAQ__ico"] {
+    list-style: none;
+    padding-left: 50px;
+    background-repeat: no-repeat ;
+    background-position: left top;
+    background-size: 39px auto;
+  }
+
   // Footer ######################################
 
   .nav-site__listitem {
