Hotfix for #800: Prevent rtl formatting of telephone/fax numbers in Arabic

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -46,4 +46,6 @@ a[href^="fax"]:visited,
 a[href^="fax"]:hover {
   text-decoration: none;
   pointer-events: none;
+  direction: ltr;
+  unicode-bidi: embed;
 }
